# decision-intelligence-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  notebook.ipynb  pyproject.toml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: priority_model.pkl
backend/app/prompts/: llm.py  rag.py
backend/app/routers/: health.py  logs.py  query.py
backend/app/schemas/: query.py
backend/app/services/: llm.py  logger.py  ml_model.py  rag.py
data/: model_metrics.json  test_features.csv  train_features.csv  val_features.csv
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: ComparisonTable.jsx  QueryInput.jsx  ResultCard.jsx
