[project]
name = "decision-intelligence-assistant-notebook"
version = "0.1.0"
description = "Notebook environment for Phase 1 data pipeline, EDA, and ML baseline"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "textblob>=0.18",
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[tool.uv]
package = false
