[project]
name = "decision-intelligence-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for four-way RAG / non-RAG / ML / LLM zero-shot comparison"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
    "groq>=0.9",
    "instructor>=1.3",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "textblob>=0.18",
    "pandas>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]